# Thesis-Architect

./: Cargo.toml  LICENSE  README.md  build.rs  index.html
.github/workflows/: release.yml
alpha/: Generate_Research_Structure.ps1
assets/: app-icon.icns
main/: Launch_Generate_Research_Structure.bat
src/: main.rs
